--- a/customCSS.css
+++ b/customCSS.css
@@ -1,5 +1,5 @@
 body {
-    background: #E1E3E4; 
+    background-image: url("https://images.wallpapersden.com/image/download/digital-city-road_a2lnbGqUmZqaraWkpJRnamtlrWZlbWU.jpg");
 }
 table{
     width:100%;
