--- a/NewSignUp.css
+++ b/NewSignUp.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://images.wallpapersden.com/image/download/digital-city-road_a2lnbGqUmZqaraWkpJRnamtlrWZlbWU.jpg");
+    background-image: url("https://github.com/jieWorkz/SignUp_Assets/blob/main/tcs.jpg?raw=true");
 }
 table{
     width:100%;
